# hipocrates

./: .gitignore  .zenodo.json  ABRIR_HIPOCRATES_VISUAL.bat  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASE_NOTES_v0.5.0.md  VER_HIPOCRATES.html  ZENODO_METADATA.md  ZENODO_RELEASE_CHECKLIST.md  diagnostico.py  pyproject.toml  requirements.txt  run_examples.py
app/: streamlit_app.py  ui_helpers.py
examples/: abg_example.json  bayes_example.json  dca_example.json  pk_cockcroft_gault_example.json  pk_iv_bolus_example.json  pk_oral_bateman_example.json  pk_phenytoin_mm_example.json  pk_target_dosing_example.json  pk_target_dosing_renal_auto_example.json  pk_tdm_bayes_map_multi_level_example.json  pk_tdm_bayes_map_single_level_example.json  sepsis_low_risk_example.json  sepsis_probable_example.json  septic_shock_probable_example.json
src/hipocrates/: __init__.py
src/hipocrates/core/: __init__.py  audit.py  io_schema.py  orchestrator.py  units_gate.py
src/hipocrates/modules/: __init__.py  abg_hh_stewart.py  bayes_sprt.py  dca.py  pk_tdm.py  sepsis_protocol.py
src/hipocrates/utils/: __init__.py  math_utils.py  types.py  validation.py
tests/: test_abg_hh_stewart.py  test_bayes_sprt.py  test_dca.py  test_io_schema.py  test_orchestrator.py  test_pk_tdm.py  test_pk_tdm_v2.py  test_sepsis_protocol.py  test_units_gate.py
