[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hipocrates"
version = "0.5.0"
description = "Motor de Apoyo Clínico Computable — SMNC-5+ — Prototipo de investigación"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
